Fix twint spacing on mobile

--- a/src/styles/components/_responsive.scss
+++ b/src/styles/components/_responsive.scss
@@ -171,7 +171,8 @@
 	}
 
 	#rnw-paylink-button-drydk{
-		margin-top: 2rem;
+		margin-top: 1rem;
+		margin-bottom: 1rem;
 	}
 
 }
